Closed Bug 1584215 Opened 5 years ago Closed 5 years ago

Crash in mozilla::MozPromise<T>::ThenValueBase::Disconnect

Categories

(Core :: Audio/Video: Playback, defect)

defect
Not set
major

Tracking

()

VERIFIED FIXED
mozilla71
Tracking Status
firefox-esr60 --- unaffected
firefox-esr68 --- unaffected
firefox69 --- unaffected
firefox70 --- unaffected
firefox71 blocking verified

People

(Reporter: viktor_jaegerskuepper, Assigned: alwu)

Details

(Keywords: crash, regression, Whiteboard: [rca: Coding Error])

Crash Data

Attachments

(1 file)

I submitted the crash report 25653c2e-ed08-4f92-ac66-cc1ca0190926, and there are already a few similar reports. It seems that the latest Nightly (20190926094200) triggers it, but the crash has occured with another build a few months ago.

I am not sure if the component for this bug is correct, I just guessed it from the source file.

Looks as if crashes started in 20190926094200 and are Windows only so far. Possible regression range based on Build ID: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=c31591e0b66f277398bee74da03c49e8f8a0ede0&tochange=1dc1a755079a15e35cb234db511e52ab463b2f42.

Looks as if Bug 1578615 touched code in this area. Moving to a better home, hopefully and adding a ni.

Status: UNCONFIRMED → NEW
Crash Signature: [@ mozilla::MozPromise<T>::ThenValueBase::Disconnect ]
Component: XPCOM → Audio/Video: Playback
Ever confirmed: true
Flags: needinfo?(alwu)
Keywords: crash, regression

Looks as if crashes started in 20190926094200 and are Windows only so far.

Actually I am using Linux, but all the other reporters are using Windows 10 if I understand the statistics correctly.

Assignee: nobody → alwu
Flags: needinfo?(alwu)

Steps to reproduce with a new profile:

  1. Set "media.autoplay.default" to "0"
  2. Go to www.tagesschau.de (german news site, no ads)
  3. Look for a link which leads to a page with an embedded video (those are indicated by a camera icon on the picture) and open the link via right-click and "open in a new tab" so that the new tab loads in background
  4. Switch to the new tab
    (5. Scroll down until the embedded video appears)
    -> crash

The mentioned site is quite popular so you will probably get many crash reports (more than 100 as of writing).

I have already had a patch for it, but now the phabricator has a issue, which makes my patch being a draft state forever. Once it gets fixed, I willl land my code ASAP.

Adding the macOS specific signature.

Crash Signature: [@ mozilla::MozPromise<T>::ThenValueBase::Disconnect ] → [@ mozilla::MozPromise<T>::ThenValueBase::Disconnect ] [@ mozilla::MozPromise<T>::ThenValue<T>::Disconnect ]
OS: Unspecified → All
Hardware: Unspecified → All

The request is used to track if the promise is resolved or not, so we should call its Complete() method once promise is resolved, in order to keep the state of the request correct.

Pushed by alwu@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/8c41959333fb
complete the request once promise is resolved. r=chunmin
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla71
Severity: normal → major
Flags: qe-verify+

Hello! Reproduced the issue with Firefox 71.0a1 (20190926213542) on Windows 10x64.
The issue is verified fixed with Firefox 71.0b9 (20191007215350) on Windows 10x64, Ubuntu 18.04 and macOS 10.12. No tab crash encountered after following the STR from comment 3.

Status: RESOLVED → VERIFIED
Flags: qe-verify+

This bug has been identified as part of a pilot on determining root causes of blocking and dot release drivers.

It needs a root-cause set for it. Please see the list at https://docs.google.com/document/d/1FFEGsmoU8T0N8R9kk-MXWptOPtXXXRRIe4vQo3_HgMw/.

Add the root cause as a whiteboard tag in the form [rca - <cause> ] and remove the rca-needed keyword.

If you have questions, please contact :tmaity.

Keywords: rca-needed
Keywords: rca-needed
Whiteboard: [rca: Coding Error]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: